mobile alignment fix

--- a/src/app/home/result/result.component.scss
+++ b/src/app/home/result/result.component.scss
@@ -1,3 +1,13 @@
 .pnr-results {
     border-bottom: 1px solid #767676;;
 }
+
+@media screen and (max-width: 680px) {
+    mat-card {
+        margin-bottom: 0.5rem;
+    }
+
+    mat-error {
+        text-align: center;
+    }
+}
