--- a/src/styles.scss
+++ b/src/styles.scss
@@ -97,6 +97,10 @@ nav ul li a {
     color: #fff;
     border: none;
     cursor: pointer;
+
+    @media screen and (max-width: 680px) {
+        margin-top: 1.7rem;
+    }
 }
 
 .pnr-form p {
@@ -117,30 +121,6 @@ nav ul li a {
 .pnr-card h3 {
     margin-bottom: 10px;
 }
-
-// .footer {
-//     background-color: #f0f0f0;
-//     padding: 20px;
-//     display: flex;
-//     align-items: center;
-//     justify-content: space-between;
-//     font-size: 14px;
-//     color: #666;
-// }
-
-// .footer-links ul {
-//     list-style: none;
-// }
-
-// .footer-links ul li {
-//     display: inline-block;
-//     margin-left: 10px;
-// }
-
-// .footer-links ul li a {
-//     text-decoration: none;
-//     color: #666;
-// }
 
 .social-media img {
     width: 20px;
